--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-dom": "^18.2.0",
     "react-just-parallax": "^3.1.16",
     "react-router-dom": "^6.23.0",
-    "scroll-lock": "^2.1.5"
+    "scroll-lock": "^2.1.5",
+    "yarn": "^1.22.22"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
